design/admin/stylesheets/core.css
/* CORE CSS 20100126 */

/* BODY */

html
{
    height: 100%; /* To be able to have full page designs in themes */
    min-height:100%;
}

body /* These becomes the initial settings for most other elements */
{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 0.8em;
    background-color: #ffffff;
    margin: 0;
    padding: 0;
    height: 100%;
    min-height:100%;
}

/* HEADINGS */

h1, h2, h3, h4, h5, h6 /* Set general styles for all headings; some may be overridden later */
{
    font-family: Helvetica, Arial, sans-serif;
    margin: 0.5em 0 0.2em 0;
    padding: 0;
}

h1
{
    font-size: 1.8em;
}

h2
{
    font-size: 1.4em;
}

h3
{
    font-size: 1.1em;
}

h4, h5, h6
{
    font-size: 1em;
}

h6
{
    margin: 0.4em 0 0.1em 0;
}


/* PARAGRAPHS */

p
{
    margin: 0.5em 0 0.5em 0;
    line-height: 1.25em; /* This is aprox. default line height in most popular browsers; set explicitly to ensure consitency. */
}

/* LINKS */

a
{
    color: #0b4e7a;
    text-decoration: underline;
}

a:hover
{
    color: black;
    text-decoration: underline;
    cursor: pointer;
}

a img
{
    border: none; /* Some browsers may display a border around a linked image without this attribute set to _none_. */
}


/* PRE TEXT */

pre, code
{
    font-family: "Courier New", Courier, monospace; /* Usually defaulted to monospaced font anyway, but browwsers may vary which one is used, so giving exact alternatives helps visual consistenct */
    font-size: 1em; /* Setting this exact size may also help visual consistency */
}

pre
{
    background-color: #f8f8f8;
    margin: 1em 0 1em 0;
    padding: 0.2em;
    border: 1px solid #e0e0e0;
}

pre.wordwrap /* Style for ensuring long lines in pre field won't break the design; use &nbsp; instead to preserve white-space where desired */
{
    white-space: normal;
}

pre.wordwrap span.line /* Style for tag wrapping around each line of text */
{
    display: block;
}

/* Typography & Font Icons*/
@font-face
{
    font-family: 'IcoMoon';
    src: url('../fonts/IcoMoon.eot');
    src: url('../fonts/IcoMoon.eot?#iefix') format('embedded-opentype'), url('../fonts/IcoMoon.svg#IcoMoon') format('svg'), url('../fonts/IcoMoon.woff') format('woff'), url('../fonts/IcoMoon.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

[data-icon]:before
{
    font-family: 'IcoMoon';
    content: attr(data-icon);
    speak: none;
}


/* TABLES */

table
{
    font-size: 1em; /* Fix for size "loss" in tables in IE; redundant for most other browsers */
    margin: 0;
    padding: 0;
}

tr
{
    background: white;
}

th, td
{
    padding: 0;
}
th
{
    font-size:1.1em;
}

table.list td
{
font-size:1.05em;
}

table.list, table.special /* Standard class usable for most regular tables presenting lists, with additional related styles */
{
    width: 100%;
    empty-cells: show;
}

table.list th, table.list td, table.special th, table.special td
{
    padding: 0.4em;
    text-align: left;
    vertical-align: middle;
}

table.list th, table.special th
{
    font-weight: normal;
    white-space: nowrap;
}

table.list td
{
    font-weight: normal;
}

table.list tr:first-child td
{
   border-top: 0 none;
}

/* 'not available rate' */
table.list td.na-rate, table.special td.na-rate
{
    text-align: right;
    font-style: italic;
    color: #C0C0C0;
}

table.list tr.bglight
{
    background-color: #fff;
}

table.list tr.bgdark, table.special tr.bgdark
{
    background-color: #f5f5f5;
}

table.list tr.bglight:hover, table.list tr.bgdark:hover /* This has no effect in IE6 and below */
{
    background-color: #e8e8e8;
}

table.list img
{
    vertical-align: middle;
}

th.tight, td.tight
{
    width: 1%;
}

td.nowrap
{
    white-space: nowrap;
}

td.number, table.list td.number, table.special td.number, table.list td.right
{
    text-align: right;
}


/* ORDERED AND UNORDERED LISTS */

ul, ol
{
    margin: 0.75em 0 1em 2.5em;
    padding: 0;
}

ul ul, ol ul
{
    margin: 0.3em 0 0.5em 1.3em;
}

ul ol, ol ol
{
    margin: 0.3em 0 0.5em 1.9em;
}

ul, ul ul
{
    list-style-type: disc;
}

li
{
    margin: 0 0 0.3em 0;
    padding: 0;
    line-height: 1.25em;
}

/* DEFINITION LISTS */

dl
{
    margin: 0.25em 0 0.25em 0;
    padding: 0;
}

dt, dd
{
    font-style: normal;
    margin: 0 0 0.25em 0;
}

dt
{
    font-weight: bold;
}

dd
{
    margin: 0 1em 0.5em 2.5em;
}


/* FORM ELEMENTS */

form
{
    margin: 0;
    padding: 0;
}

label
{
    font-weight: bold;
    padding-right: 0.5em;
    display: block;
    white-space: nowrap;
    font-size:1.1em;
}

input, select
{
    font-family: Arial, Helvetica, sans-serif; /* Needs to be set for some browsers, to prevent other default font from being used */
    font-size: 1em;
}

input.box, input.halfbox
{
    font-size: 1em;
}

textarea
{
    font-family: Arial, Helvetica, sans-serif; /* Usually defaulted to monospaced font; so it needs to be set if to change */
    font-size: 1em; /* Needs to be specified for IE */
}

optgroup
{
    font-weight: bold;
    font-style: normal;
}

input.button, button, input.defaultbutton, input.button-disabled
{
    font-family: Verdana, Arial, Helvetica, sans-serif;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
    font-size: 0.9em;
    font-weight: normal;
    padding-left: 0.25em;
    padding-right: 0.25em;
}

input.defaultbutton
{
    font-weight: bold;
    padding-left: 0.45em;
    padding-right: 0.45em;
    color: #094564;
}

input.button-disabled, input.button[disabled="disabled"]
{
    cursor: default;
    color: #888;
}

input.disabled[type="image"]
{
	opacity: 0.7;
	cursor: default;
}

input.box, textarea.box
{
    width: 100%;
}

input.halfbox, textarea.halfbox
{
    width: 48%;
}

td input.halfbox, td textarea.halfbox
{
    width: 98%;
}

fieldset
{
    border: 1px solid #CACACA;
    background-color: #F8F8F8;
    padding: 0.7em;
    margin: 0em;
}

fieldset.block
{
    padding-bottom: 0em;
}

legend
{
    font-weight: bold;
    color: #000000;
    padding: 0 0.35em 0 0.35em;
    font-size:1.1em;
}

fieldset label
{
    color: #000000;
    font-size:1em;
}

label select
{
font-size:0.9em;
}


/* HORIZONTAL RULERS */

hr /* General formatting for all horizontal rulers */
{
    color: #ffffff; /* Color must be set to the same as the background color to hide default formatting in IE */
    border: none; /* All borders must be removed as they are default for Opera */
    border-top: 1px solid #e7e8e0; /* This single top border is the one replacing the default look of the ruler */
    height: 1px;
    margin: 0.35em 0 0.35em 0; /* Be aware that these margins may not be calculated consistently across browsers */
}


/* MESSAGES TO THE USER */

div.message-confirmation, div.message-feedback, div.message-warning, div.message-error
{
    margin: 0.5em 0 1em 0;
    padding: 0.25em 1em 0.75em 1em;
    border: 6px solid #000000;
}

div.box-content div.message-confirmation, div.box-content div.message-feedback, div.box-content  div.message-warning, div.box-content  div.message-error
{
    margin-top: 0;
    padding: 0.25em 0.5em 0.25em 0.5em;
    border: none;
    background-color: transparent;
}

div.message-feedback h2, div.message-warning h2, div.message-error h2
{
    background-repeat: no-repeat;
    background-position: 0 0;
    margin-left: 0.5em;
    padding: 0.25em 0.5em 0.5em 2.5em;
}

div.message-feedback
{
    border-color: #3e8d29;
}

div.message-feedback h2
{
    background-image: url(../images/message-feedback.gif);
}

div.message-warning
{
    border-color: #ff910d;
    background: #fff;
}

div.message-warning h2
{
    background-image: url(../images/message-warning.gif);
}

div.message-error
{
    border-color: #C11B17;
}

div.message-error h2
{
    background-image: url(../images/message-error.gif);
}

div.message-feedback span.time, div.message-warning span.time, div.message-error span.time
{
    font-size: 0.8em;
    margin-top: 0.15em;
    display: block;
    float: right;
}

label.message-error, legend.message-error
{
    color: maroon;
}


/* The remaining styles are important for proper content rendering in eZ publish - Do not remove or alter them without proper knowledge of the possible consequences */

/* POSITION CONTROL */

div.block /* Used around groups of objects which are connected in some way, and requires extra margins to the surroundings */
{
    margin: 0.5em 0 0.5em 0;
    padding: 0;
    clear: both;
}

div.block div.element, div.block div.halfelement /* Used if several objects are to be stacked horizontally within the same block */
{
    padding-right: 1em;
    float: left;
}

div.halfelement
{
    width: 48%;
}

div.block div.left /* Floats elements to the left in a block */
{
    width: 48%;
    float: left;
    clear: left;
}

div.block div.right /* Floats elements to the right in a block */
{
    width: 48%;
    float: right;
    clear: right;
}

div.button-left
{
    float: left;
}

div.button-right
{
    float: right;
    margin-left: 1em;
}

div.button-header
{
    margin-top: 1em;
}

p.text-left, td.text-left, th.text-left, *.text-left
{
    text-align: left;
}

p.text-right, td.text-right, th.text-right, *.text-right
{
    text-align: right;
}

p.text-center, td.text-center, th.text-center, *.text-center
{
    text-align: center;
}

p.text-justify, td.text-justify, th.text-justify, *.text-justify
{
    text-align: justify;
}

div.object-left, table.object-left /* Used for floating images and other content elements to the left inside other content */
{
    margin: 0.25em 0.25em 0.25em 0;
    float: left;
    clear: left;
}

div.object-right, table.object-right /* Used for floating images and other content elements to the right inside other content */
{
    margin: 0.25em 0 0.25em 0.25em;
    float: right;
    clear: right;
}

div.object-center, table.object-center
{
    margin: 0.25em auto 0.25em auto;
    text-align: center;
}

.float-break
{
    height: 1%; /* Fix for IE */
}

.float-break:after /* Terminate floating elements flow */
{
    content: "-";
    height: 0;
    font-size: 0;
    visibility: hidden;
    display: block;
    clear: both;
}

div.break /* Old method for terminating floating elements flow; kept for backwards compatibility */
{
    clear: both;
    font-size: 1px; /* Fix for IE */
    height: 1px;
    margin-bottom: -1px;
}


/* SPLIT THREE */

div.split
{
    clear: both;
}

div.split div.three-left
{
    width: 31%;
    float: left;
}

div.split div.three-right
{
    width: 31%;
    float: right;
}

div.split div.three-center
{
    margin: 0 35% 0 35%;
}


/* MISCELLANEOUS STYLES */

div.oe-window /* Needed by OE 5.0 when translating content */
{
    clear: both;
}

.small
{
    font-size: 85%;
}

.hide /* Used on elements which should only be visible if CSS in disabled or unavailable */
{
    display: none;
}

.spamfilter /* Simple fix for stopping spambots from getting correct e-mail addresses from a web page: info<span class="spamfilter>SPAMFILTER</span>@ez.no <span class="spamfilter>(Remove SPAMFILTER to reply)</span> */
{
    display: none;
}

